--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ onload=function(){
   var wmin=40;
   var wmax=50;
   var height=80;
-  var numsections=8;
+  var numsections=9;
   var thickness=3;
   var duktaJoint=0.2;
   var supportLength=1.5*thickness;
@@ -22,7 +22,7 @@ onload=function(){
   for(var i=0;i<numsections;i++){
     sections.push(
       [i-0.5,i+0.5].map(function(y){
-        return {x: Math.cos(y/(numsections-1)*Math.PI),y:y}
+        return {x: Math.cos(y/(numsections-1)*Math.PI),y:y,i:i}
       })
     );
   }
@@ -31,7 +31,8 @@ onload=function(){
     return s.map(function(p){
       return {
         x: ((p.x-sfirst.x)/(slast.x-sfirst.x)-0.5)*(wmax-wmin)/2,
-        y: (p.y-sfirst.y)/(slast.y-sfirst.y)*height
+        y: (p.y-sfirst.y)/(slast.y-sfirst.y)*height,
+        i: p.i
       }
     });
   })
@@ -98,7 +99,7 @@ onload=function(){
         })
       }
       //support
-      if(!first&&!last){
+      if(!first&&!last&&s[0].i%2==0){
         var x=(lines[i][0].x+lines[i][1].x)/2;
         var y=(lines[i][0].y+lines[i][1].y)/2;
         var lx=(lines[i][1].y-lines[i][0].y)/2;
@@ -121,8 +122,59 @@ onload=function(){
     }
   })
 
+  
+  svg.trans.x=47;
+  svg.trans.y=135;
+  var bottomR=wmin/Math.tan(Math.PI/N)/2;
+  var points=[];
+  for(var i=0;i<N;i++){
+    var t=2*Math.PI*i/N,cos=Math.cos(t),sin=Math.sin(t);
+    function trans(x,y){return {x:x*cos-y*sin,y:x*sin+y*cos};}
+    points.push(trans(bottomR,-wmin/2+cutDepth+edgeSupportDepth));
+    points.push(trans(bottomR+thickness,-wmin/2+cutDepth+edgeSupportDepth));
+    points.push(trans(bottomR+thickness,-wmin/2+cutDepth+edgeSupportDepth+supportLength));
+    points.push(trans(bottomR,-wmin/2+cutDepth+edgeSupportDepth+supportLength));
+    points.push(trans(bottomR,wmin/2-cutDepth-edgeSupportDepth-supportLength));
+    points.push(trans(bottomR+thickness,wmin/2-cutDepth-edgeSupportDepth-supportLength));
+    points.push(trans(bottomR+thickness,wmin/2-cutDepth-edgeSupportDepth));
+    points.push(trans(bottomR,wmin/2-cutDepth-edgeSupportDepth));
+  }
+  svg.line(points,true);
 
-
+  svg.trans.x=82-points[4].x;
+  svg.trans.y=101-points[4].y;
+  for(var i=0;i<N;i++){
+    svg.line(points.slice(4,12),true)
+    svg.trans.x+=7;
+  }
+  svg.trans.x=111;svg.trans.y=112
+  for(var i=0;i<2*N;i++){
+    var points=[];
+    var dir={x:-Math.sin(2*Math.PI/N),y:Math.cos(2*Math.PI/N)};
+    var ps=[
+      {x:thickness,y:cutDepth+edgeSupportDepth+supportLength},
+      {x:thickness,y:cutDepth},
+      {x:0,y:cutDepth},
+      {x:0,y:cutDepth+edgeSupportDepth}
+    ];
+    [0,1,2,3].forEach(function(i){
+      points.push({x:ps[i].x,y:-ps[i].y})  
+    });
+    [3,2,1,0].forEach(function(i){
+      points.push({x:ps[i].x*dir.y+ps[i].y*dir.x,y:-ps[i].x*dir.x+ps[i].y*dir.y})  
+    })
+    svg.line(points);
+    k=1.25;
+    svg.curve([
+      points[0],
+      {x:k*cutDepth*Math.cos(Math.PI/N),y:k*cutDepth*Math.sin(Math.PI/N)},
+      points[7]
+    ]);
+    svg.trans.x+=10;
+  }
+  sections.forEach(function(s){
+    // s[]
+  })
 
 
 
