commentout unused parts

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ onload=function(){
       svg.trans.x=90
       svg.trans.y=140+yoffset
       for(var i=0;i<N;i++){
-        svg.line(points,true)
+        // svg.line(points,true)
         svg.trans.x+=13;
       }
       addouter(N)
